--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,45 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #131518;
+  margin: 0;
+  font-family: 'Overpass', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.button1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #7C8798;
+  text-align: center;
+  font-weight: 700;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 0;
+  background-color: #262E38;
+}
+.button1:hover{
+  background: #FC7614;
+  color: white;
+}
+
+.button1 .active{
+  color: white;
+  background-color: green;
 }
 
 code {
